# AquaTick

./: .gitignore  package.json  pnpm-lock.yaml
apps/desktop/: .env.example  eslint.config.js  index.html  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: .gitkeep  mod.rs  scheduler.rs  session.rs  settings.rs  statistics.rs
apps/desktop/src-tauri/src/constants/: mod.rs
apps/desktop/src-tauri/src/database/: migrations.rs  mod.rs
apps/desktop/src-tauri/src/errors/: mod.rs
apps/desktop/src-tauri/src/models/: mod.rs  session.rs  setting.rs  statistics.rs
apps/desktop/src-tauri/src/repositories/: mod.rs  session_repo.rs  settings_repo.rs  statistics_repo.rs
apps/desktop/src-tauri/src/scheduler/: mod.rs
apps/desktop/src-tauri/src/services/: activity_monitor_service.rs  mod.rs  reminder_engine_service.rs  scheduler_service.rs  session_service.rs  settings_service.rs  statistics_service.rs
apps/desktop/src-tauri/src/state/: .gitkeep  mod.rs
apps/desktop/src/components/: SystemOrchestrator.tsx
apps/desktop/src/store/: index.ts
docs/: phase_5a_character_system_architecture.md  phase_5a_character_system_implementation_plan.md  phase_5b_event_bridge_architecture.md  phase_5c_reminder_window_architecture.md
(+34 files in other folders)
